[package]
name = "life-game"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
getch = "0.3.1"
indicatif = "0.17.8"
proconio = "0.4.5"
rand = "0.8.5"
rayon = "1.8.1"
